--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                 <td class="members">
                   <div class="memberPics">
                     <div></div>
-                    <img src="/assets/1.jpg" alt="">
-                    <img src="/assets/2.jpg" alt="">
-                    <img src="/assets/3.jpg" alt="">
-                    <img src="/assets/4.jpg" alt="">
+                    <img src="./assets/1.jpg" alt="">
+                    <img src="./assets/2.jpg" alt="">
+                    <img src="./assets/3.jpg" alt="">
+                    <img src="./assets/4.jpg" alt="">
                     <div></div>
                   </div>
                 </td>
