modified:   index.html 	modified:   scripts.js

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <footer>
           <div class="div1 button"> <span id = "brandCount">0</span> Selected</div>
           <div class="div2 button"><i class="fa-solid fa-box-archive"></i> Archive</div>
-          <div class="div3 button"><i class="fa-solid fa-trash"></i> Delete</div>
+          <div onclick = "handleDelete()" class="div3 button" ><i class="fa-solid fa-trash"></i> Delete</div>
           <div class="div4 button">More <i class="fa-solid fa-caret-down"></i></div>
           <i class="fa-solid fa-xmark"></i>
         </footer>
